; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_set_fsblocksize.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_set_fsblocksize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnode = type { i64, i32 }

@VBLK = common dso_local global i64 0, align 8
@nblkdev = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_fsblocksize(%struct.vnode* %0) #0 {
  %2 = alloca %struct.vnode*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.vnode* %0, %struct.vnode** %2, align 8
  %5 = load %struct.vnode*, %struct.vnode** %2, align 8
  %6 = getelementptr inbounds %struct.vnode, %struct.vnode* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @VBLK, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %29

10:                                               ; preds = %1
  %11 = load %struct.vnode*, %struct.vnode** %2, align 8
  %12 = getelementptr inbounds %struct.vnode, %struct.vnode* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @major(i32 %14)
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* %4, align 4
  %17 = sext i32 %16 to i64
  %18 = load i64, i64* @nblkdev, align 8
  %19 = icmp sge i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %10
  br label %29

21:                                               ; preds = %10
  %22 = load %struct.vnode*, %struct.vnode** %2, align 8
  %23 = call i32 @vnode_lock(%struct.vnode* %22)
  %24 = load %struct.vnode*, %struct.vnode** %2, align 8
  %25 = load i32, i32* %3, align 4
  %26 = call i32 @set_blocksize(%struct.vnode* %24, i32 %25)
  %27 = load %struct.vnode*, %struct.vnode** %2, align 8
  %28 = call i32 @vnode_unlock(%struct.vnode* %27)
  br label %29

29:                                               ; preds = %20, %21, %1
  ret void
}

declare dso_local i32 @major(i32) #1

declare dso_local i32 @vnode_lock(%struct.vnode*) #1

declare dso_local i32 @set_blocksize(%struct.vnode*, i32) #1

declare dso_local i32 @vnode_unlock(%struct.vnode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
